# patatabot

./: .gitignore  README.md  config.py  main.py
assets/: dictionnaire.txt
commands/: __init__.py  apero.py  aperoV2.py  boggle.py  chats.py  dames_discord.py  patate_of_the_day.py  secretsanta.py
commands/apero/: apero.py  command.py  moment.py  requete.py  traitement_args.py
commands/aperoV2_classes/: apero_class.py  moment_class.py
commands/aperoV2_files/: aperoV2_man.md  apero_class.py  moment_class.py  requete.py  traitement_args.py
commands/dames/classes/: Case.py  Jeu.py  Pion.py  Plateau.py
commands/dames_files/classes/: Case.py  Jeu.py  Pion.py  Plateau.py
commands/patateOfTheDay/: README.md
patatarust/: Cargo.toml
patatarust/src/: main.rs  puissance4.rs
patatarust/src/puissance4/: mod.rs  stats.rs
