[package]
name = "patatarust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
features = ["client", "gateway", "rustls_backend", "model"]
