[package]
name = "patatarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ron = "0.7"
serde = "1.0"
rand = "0.8"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
